# mistralhack

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: artifacts.py  auth.py  documents.py  health.py  jobs.py  modules.py
backend/app/core/: config.py  config.yaml  oauth_google.py  security.py  settings.py
backend/app/db/: models.py  session.py
backend/app/db/alembic/: env.py
backend/app/db/alembic/versions/: 0001_initial.py
backend/app/services/: chunking.py  module_extraction.py  pdf_parse.py  storage.py
backend/app/services/captions/: align.py  srt.py
backend/app/services/llm/: base.py  manim_agent.py  manim_docs.py  openai_provider.py  prompts.py  script_agent.py
backend/app/services/pipeline/: generate_module_assets_job.py  parse_document_job.py  types.py
backend/app/services/render/: manim_mcp_renderer.py  manim_renderer.py  mux.py
backend/app/services/tts/: elevenlabs_client.py
backend/app/tests/: conftest.py  test_auth.py  test_captions_align.py  test_documents.py  test_jobs.py  test_manim_agent.py  test_manim_agent_validation.py  test_modules.py  test_openai_provider_json.py  test_pipeline_unit.py  test_prompts.py  test_script_agent.py  test_validation.py
backend/app/workers/: rq_worker.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  (+2 more)
(+32 files in other folders)
